# winterthur-lsp

./: .gitignore  Cargo.lock.license  Cargo.toml  build.gradle.kts  settings.gradle.kts
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/winterthur/: Cargo.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/: Main.kt
