# SPDX-FileCopyrightText: © 2024 Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "winterthur-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ObjectPascal-Community/winterthur-lsp"
keywords = ["objectpascal", "pascal", "lsp"]
description = "A language server for the Object Pascal language"

[dependencies]
