# SPDX-FileCopyrightText: © 2024 Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
rust-version = "1.81"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>"]
repository = "https://github.com/ObjectPascal-Community/winterthur-lsp"

[profile.dev]
debug = 1

[profile.release]
incremental = true
debug = 0

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

too_long_first_doc_paragraph = "allow"
single_match = "allow"
result_unit_err = "allow"
len_without_is_empty = "allow"
enum_variant_names = "allow"
new_ret_no_self = "allow"
useless_asref = "allow"
assigning_clones = "allow"

too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

rc_buffer = "warn"
str_to_string = "warn"
