# SPDX-FileCopyrightText: © 2024 Ștefan-Iulian Alecu <uneven-shiver@protonmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "winterthur"
version = "0.0.0"
keywords = ["objectpascal", "pascal", "lsp"]
description = "A language server for the Object Pascal language"

repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "winterthur"
path = "src/bin/main.rs"

[lints]
workspace = true
